[project]
name = "ai-knowledge-graph"
version = "0.6.0"
description = "Takes a text document and generates an interactive knowledge graph"
authors = [{ name = "Nihar Sanda", email = "nihar.sanda@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.4.2",
    "pyvis>=0.3.2",
    "requests>=2.32.3",
    "tomli>=2.2.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
generate-graph = "src:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.ruff]
line-length = 88  # Set the maximum line length
select = ["E", "F", "W"]  # Enable specific linting rules
ignore = []  # Add rules to ignore if needed